# the-saviour-career-v2

./: .replit  LICENSE  README.md  app.py  database.py  pyproject.toml  replit.nix
templates/: application_form.html  application_submittd.html  banner.html  footer.html  home.html  jobitem.html  jobpage.html  navbar.html
