[tool.poetry]
name = "repl-nix-the-saviour-career-"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_the_saviour_career_"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
sqlalchemy = "^2.0.28"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
